Fix scrollbar

--- a/themes/hfng/assets/scss/_main.scss
+++ b/themes/hfng/assets/scss/_main.scss
@@ -25,7 +25,8 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  overflow: scroll;
+  
+  overflow-y: scroll;
 
   // Default
   background-color: $light-background;
